add email validation to profile page and translate roles to spanish
